--- a/.github/workflow-config.json
+++ b/.github/workflow-config.json
@@ -34,7 +34,16 @@
           "tar",
           "unzip",
           "zip",
-          "libpulse-dev"
+          "libpulse-dev",
+          "mesa-common-dev",
+          "libglu1-mesa-dev",
+          "libx11-dev",
+          "libxext-dev",
+          "libxi-dev",
+          "libxrandr-dev",
+          "libxcursor-dev",
+          "libxinerama-dev",
+          "libxxf86vm-dev"
         ]
       },
       {
@@ -69,7 +78,16 @@
           "pulseaudio-libs-devel",
           "gcc",
           "gcc-c++",
-          "python3"
+          "python3",
+          "mesa-libGL-devel",
+          "mesa-libGLU-devel",
+          "libX11-devel",
+          "libXext-devel",
+          "libXi-devel",
+          "libXrandr-devel",
+          "libXcursor-devel",
+          "libXinerama-devel",
+          "libXxf86vm-devel"
         ]
       }
     ]
