Add sudo to Fedora build dependencies and configure non-root build
- Add sudo package to Fedora build dependencies - Remove container user
options to allow root access - Use sudo to build as nobody user for
security - Add security configuration for non-root builds

--- a/.github/workflow-config.json
+++ b/.github/workflow-config.json
@@ -87,7 +87,8 @@
           "libXrandr-devel",
           "libXcursor-devel",
           "libXinerama-devel",
-          "libXxf86vm-devel"
+          "libXxf86vm-devel",
+          "sudo"
         ]
       }
     ]
@@ -122,5 +123,9 @@
     "prerelease": false,
     "generate_release_notes": true,
     "include_artifacts": true
+  },
+  "security": {
+    "fedora_build_user": "nobody",
+    "use_sudo_for_non_root_build": true
   }
 }
