--- a/.github/workflow-config.json
+++ b/.github/workflow-config.json
@@ -17,7 +17,7 @@
       {
         "name": "ubuntu",
         "runs_on": "ubuntu-latest",
-        "compilers": ["gcc-14", "clang-20"],
+        "compiler": "gcc-14",
         "dependencies": [
           "autoconf",
           "autoconf-archive",
@@ -61,6 +61,7 @@
         "name": "fedora",
         "runs_on": "fedora:latest",
         "container": true,
+        "compiler": "system-gcc",
         "dependencies": [
           "autoconf-archive",
           "automake",
